# Posejdon

./: .gitignore  README.md  pyproject.toml
prompts/posejdon/: review-sensitive-entities.yaml  verify-document-anonymized-window.yaml
src/posejdon/: __init__.py  anonymizer.py  prompt_registry.py  risk_scoring.py
src/posejdon/core/: constants.py  enums.py  errors.py  logging.py  settings.py  structured_logging.py
src/posejdon/detectors/: base.py  fusion.py  gliner_detector.py  llm_review.py  mention_memory.py  presidio_detector.py  regex_detector.py  regex_support.py  spacy_detector.py
src/posejdon/domain/: artifacts.py  entities.py  models.py  policies.py  replacements.py  reports.py
src/posejdon/planners/: confidence_policy.py  overlap_resolver.py  placeholder_strategy.py  reinjection_planner.py  replacement_planner.py
src/posejdon/storage/: artifacts.py  audit.py  hashing.py  regex_catalog.py  vault.py
src/posejdon/validators/: leakage_validator.py  report_validator.py  structural_validator.py
tests/: test_structured_logging.py
tests/fixtures/benchmarks/: synthetic_contract_benchmark_30p_seeded.json
tests/unit/: test_anonymizer_compat.py  test_audit_trail.py  test_core_models.py  test_llm_review_fail_closed.py  test_performance.py  test_polish_anonymization_audit.py  test_polish_validators.py  test_prompt_registry.py  test_regex_detector.py  test_replacement_modes.py
