[project]
name = "posejdon"
version = "0.1.0"
description = "Polish-first text anonymization package using Presidio, regex validators, and optional GLiNER."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Posejdon contributors" }
]
dependencies = [
  "click>=8.0.0",
  "httpx>=0.28.1",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "jinja2>=3.1.0",
  "pyyaml>=6.0.2",
  "regex>=2025.0.0",
]

[project.optional-dependencies]
detectors = [
  "gliner>=0.2.22",
  "presidio-analyzer>=2.2.357",
  "presidio-anonymizer>=2.2.357",
  "spacy>=3.8.7",
]
llm = [
  "mlx>=0.31.0",
  "mlx-lm>=0.31.0",
  "openai>=2.26.0",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
